/*
 * satellite-window.ts
 *
 * Copyright (C) 2021 by RStudio, PBC
 *
 * Unless you have received this program directly from RStudio pursuant
 * to the terms of a commercial license agreement with RStudio, then
 * this program is licensed to you under the terms of version 3 of the
 * GNU Affero General Public License. This program is distributed WITHOUT
 * ANY EXPRESS OR IMPLIED WARRANTY, INCLUDING THOSE OF NON-INFRINGEMENT,
 * MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE. Please refer to the
 * AGPL (http://www.gnu.org/licenses/agpl-3.0.txt) for more details.
 *
 */

import { WebContents } from 'electron';

import { GwtWindow } from './gwt-window';
import { MainWindow } from './main-window';

export class SatelliteWindow extends GwtWindow {
  constructor(
    mainWindow: MainWindow,
    name: string,
    opener: WebContents
  ) {
    super(true, name, undefined, undefined, opener, mainWindow.isRemoteDesktop, ['desktop']);
  }
}
