@startuml
title Qt Desktop Window Classes
legend top center
Major classes related to top-level windows and QtWebEngine in RStudio Desktop.
endlegend

hide empty members

skinparam class {
BackgroundColor<<Qt>> PaleGreen
BorderColor<<Qt>> SpringGreen
}

class QMainWindow << Qt >>
class QWebEngineView << Qt >>
class QWebEnginePage << Qt >>
class QToolBar << Qt >>
class QWebChannel << Qt >>

class WindowTracker
class BrowserWindow extends QMainWindow
class WebView extends QWebEngineView
class WebPage extends QWebEnginePage
class GwtWindow extends BrowserWindow
class MainWindow extends GwtWindow
class SatelliteWindow extends GwtWindow
class SecondaryWindow extends BrowserWindow
class GwtCallback
class DesktopInfo
class MenuCallback

BrowserWindow *-- QToolBar : pToolbar_
BrowserWindow *-- WebView : pView_
WebView *-- WebPage : pWebPage_
WindowTracker .. BrowserWindow : tracks >
MainWindow *-- GwtCallback
MainWindow *-- MenuCallback
QWebEnginePage *-- QWebChannel
QWebChannel *-- DesktopInfo : desktopInfo
QWebChannel *-- GwtCallback: desktop
QWebChannel *-- MenuCallback : desktopMenuCallback
BrowserWindow .. DesktopInfo : creates >
BrowserWindow .. QWebChannel : creates >
SatelliteWindow *-- GwtCallback

@enduml
